[package]
name = "rpi-albumart"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
rocket = "0.5.0-rc.1"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.136"
serde_json = "1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
